<resources>
    <string name="app_name">ScoresApp</string>
    <string name="btn_reset">Reset</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="score_a">0</string>
    <string name="plus3">+3 Points</string>
    <string name="plus2">+2 Points</string>
    <string name="free_throw">Free Throw</string>
    <string name="score_b">0</string>

</resources>